--- a/desafioback/src/main/resources/application.properties
+++ b/desafioback/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
+spring.datasource.url=jdbc:h2:mem:bancabd
+spring.datasource.username=h2
+spring.datasource.password=h2
