--- a/desafioback/src/main/resources/application.properties
+++ b/desafioback/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=9090
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.h2.console.enabled=true
